--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 
 <div class="service-grid">
-   <div clas="service-box">
+   <div class="service-box">
      <div class="service-img">
          <img src="images/search.png" alt="">
      </div>
@@ -86,7 +86,7 @@
          </div>
      </div>
    </div>
-   <div clas="service-box">
+   <div class="service-box">
     <div class="service-img">
         <img src="images/pharmacy.png" alt="">
     </div>
@@ -103,7 +103,7 @@
         </div>
     </div>
   </div>
-  <div clas="service-box">
+  <div class="service-box">
   <div class="service-img">
       <img src="images/consultation.png" alt="">
   </div>
@@ -120,7 +120,7 @@
   </div>
 </div>
 
-<div clas="service-box">
+<div class="service-box">
     <div class="service-img">
         <img src="images/details-info.png" alt="">
     </div>
@@ -139,7 +139,7 @@
   
  
   
-  <div clas="service-box">
+  <div class="service-box">
     <div class="service-img">
         <img src="images/emergency-dare.png" alt="">
     </div>
@@ -157,7 +157,7 @@
     </div>
   </div>
 
-  <div clas="service-box">
+  <div class="service-box">
     <div class="service-img">
         <img src="images/tracking.png" alt="">
     </div>
